--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                 Tenetur distinctio necessitatibus pariatur voluptatibus. Quidem consequatur harum volupta!
             </p>
-            <button class="btn">Find your own home</button>
+            <button class="btn home__btn">Find your own home</button>
         </div>
 
         <section class="homes">
@@ -128,7 +128,7 @@
                     </svg>
                     <p>$1,200,000</p>
                 </div>
-                <button class="cta">Contact realtor</button>
+                <button class="btn home__btn">Contact realtor</button>
             </div>
 
             <div class="home">
@@ -161,7 +161,7 @@
                     </svg>
                     <p>$2,750,000</p>
                 </div>
-                <button class="cta">Contact realtor</button>
+                <button class="btn home__btn">Contact realtor</button>
             </div>
 
             <div class="home">
@@ -194,7 +194,7 @@
                     </svg>
                     <p>$850,000</p>
                 </div>
-                <button class="cta">Contact realtor</button>
+                <button class="btn home__btn">Contact realtor</button>
             </div>
 
             <div class="home">
@@ -227,7 +227,7 @@
                     </svg>
                     <p>$1,950,000</p>
                 </div>
-                <button class="cta">Contact realtor</button>
+                <button class="btn home__btn">Contact realtor</button>
             </div>
 
             <div class="home">
@@ -260,7 +260,7 @@
                     </svg>
                     <p>$9,500,000</p>
                 </div>
-                <button class="cta">Contact realtor</button>
+                <button class="btn home__btn">Contact realtor</button>
             </div>
 
             <div class="home">
@@ -293,7 +293,7 @@
                     </svg>
                     <p>$600,000</p>
                 </div>
-                <button class="cta">Contact realtor</button>
+                <button class="btn home__btn">Contact realtor</button>
             </div>
 
         </section>
